python/sdk/network/azure-mgmt-network/tests/recordings/test_cli_mgmt_network_firewall.pyTestMgmtNetworktest_network.json
{
  "Entries": [
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0/.well-known/openid-configuration",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-identity/1.14.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Access-Control-Allow-Methods": "GET, OPTIONS",
        "Access-Control-Allow-Origin": "*",
        "Cache-Control": "max-age=86400, private",
        "Content-Length": "1753",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:08 GMT",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-ests-server": "2.1.16042.2 - KRC ProdSlices",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
        "token_endpoint_auth_methods_supported": [
          "client_secret_post",
          "private_key_jwt",
          "client_secret_basic"
        ],
        "jwks_uri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/discovery/v2.0/keys",
        "response_modes_supported": [
          "query",
          "fragment",
          "form_post"
        ],
        "subject_types_supported": [
          "pairwise"
        ],
        "id_token_signing_alg_values_supported": [
          "RS256"
        ],
        "response_types_supported": [
          "code",
          "id_token",
          "code id_token",
          "id_token token"
        ],
        "scopes_supported": [
          "openid",
          "profile",
          "email",
          "offline_access"
        ],
        "issuer": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0",
        "request_uri_parameter_supported": false,
        "userinfo_endpoint": "https://graph.microsoft.com/oidc/userinfo",
        "authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/authorize",
        "device_authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/devicecode",
        "http_logout_supported": true,
        "frontchannel_logout_supported": true,
        "end_session_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/logout",
        "claims_supported": [
          "sub",
          "iss",
          "cloud_instance_name",
          "cloud_instance_host_name",
          "cloud_graph_host_name",
          "msgraph_host",
          "aud",
          "exp",
          "iat",
          "auth_time",
          "acr",
          "nonce",
          "preferred_username",
          "name",
          "tid",
          "ver",
          "at_hash",
          "c_hash",
          "email"
        ],
        "kerberos_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/kerberos",
        "tenant_region_scope": "WW",
        "cloud_instance_name": "microsoftonline.com",
        "cloud_graph_host_name": "graph.windows.net",
        "msgraph_host": "graph.microsoft.com",
        "rbac_url": "https://pas.windows.net"
      }
    },
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
      "RequestMethod": "POST",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "client-request-id": "88c9bde4-c1d5-48fc-907a-82d4392ca843",
        "Connection": "keep-alive",
        "Content-Length": "193",
        "Content-Type": "application/x-www-form-urlencoded",
        "Cookie": "cookie;",
        "User-Agent": "azsdk-python-identity/1.14.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)",
        "x-client-cpu": "x64",
        "x-client-current-telemetry": "4|730,2|",
        "x-client-last-telemetry": "4|0|||",
        "x-client-os": "win32",
        "x-client-sku": "MSAL.Python",
        "x-client-ver": "1.23.0",
        "x-ms-lib-capability": "retry-after, h429"
      },
      "RequestBody": "client_id=00000000-0000-0000-0000-000000000000\u0026grant_type=client_credentials\u0026client_info=1\u0026client_secret=00000000-0000-0000-0000-000000000000\u0026scope=https%3A%2F%2Fmanagement.azure.com%2F.default",
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-store, no-cache",
        "client-request-id": "88c9bde4-c1d5-48fc-907a-82d4392ca843",
        "Content-Length": "114",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:08 GMT",
        "Expires": "-1",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Pragma": "no-cache",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-clitelem": "1,0,0,,",
        "x-ms-ests-server": "2.1.16042.2 - SEASLR1 ProdSlices",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_type": "Bearer",
        "expires_in": 86399,
        "ext_expires_in": 86399,
        "refresh_in": 43199,
        "access_token": "access_token"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "115",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "location": "West US",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "disableVpnEncryption": false,
          "type": "Basic"
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/98082e70-9c86-44ad-85b3-f1fdd40fc737?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "455",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:12 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "93beabf9-eef7-4307-a233-ef3008f77d37",
        "x-ms-correlation-request-id": "1994c028-7c52-4f1b-9391-cf24738963f5",
        "x-ms-ratelimit-remaining-subscription-writes": "1188",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063812Z:1994c028-7c52-4f1b-9391-cf24738963f5"
      },
      "ResponseBody": {
        "name": "virtualwan",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan",
        "etag": "W/\u0022b6b2447d-945e-4f63-8299-86e6f869eb01\u0022",
        "type": "Microsoft.Network/virtualWans",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Updating",
          "disableVpnEncryption": false,
          "allowBranchToBranchTraffic": true,
          "office365LocalBreakoutCategory": "None",
          "type": "Basic"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/98082e70-9c86-44ad-85b3-f1fdd40fc737?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:12 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d997741d-4351-48ac-bf60-9e9e1e08e65b",
        "x-ms-correlation-request-id": "8dbc720a-bfa3-4d25-ba74-ba1ef9091147",
        "x-ms-ratelimit-remaining-subscription-reads": "11952",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063813Z:8dbc720a-bfa3-4d25-ba74-ba1ef9091147"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/98082e70-9c86-44ad-85b3-f1fdd40fc737?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ceee03c8-d17e-41e5-8e64-0e301a6364f4",
        "x-ms-correlation-request-id": "19478ede-8b03-4761-a47c-d6fa819c1c84",
        "x-ms-ratelimit-remaining-subscription-reads": "11951",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063823Z:19478ede-8b03-4761-a47c-d6fa819c1c84"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:23 GMT",
        "ETag": "W/\u002211a9c035-caed-4680-93a6-883de56a9f61\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f7856aac-b00b-47b0-adb1-a353271f359e",
        "x-ms-correlation-request-id": "8d6a5e81-5b45-4490-bc4b-d59ae8e19e37",
        "x-ms-ratelimit-remaining-subscription-reads": "11950",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063823Z:8d6a5e81-5b45-4490-bc4b-d59ae8e19e37"
      },
      "ResponseBody": {
        "name": "virtualwan",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan",
        "etag": "W/\u002211a9c035-caed-4680-93a6-883de56a9f61\u0022",
        "type": "Microsoft.Network/virtualWans",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "disableVpnEncryption": false,
          "allowBranchToBranchTraffic": true,
          "office365LocalBreakoutCategory": "None",
          "type": "Basic"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "269",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "location": "West US",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "virtualWan": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan"
          },
          "addressPrefix": "10.168.0.0/24",
          "sku": "Basic"
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "816",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8b0e3dbd-3245-4c25-a4a8-463e6c36fcd9",
        "x-ms-correlation-request-id": "e595a6b6-5d3f-4acc-af58-c273f6095f90",
        "x-ms-ratelimit-remaining-subscription-writes": "1187",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063827Z:e595a6b6-5d3f-4acc-af58-c273f6095f90"
      },
      "ResponseBody": {
        "name": "virtualhub",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub",
        "etag": "W/\u00223c8c76d0-ac29-46f4-9c00-3c72a1f40c0d\u0022",
        "type": "Microsoft.Network/virtualHubs",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Updating",
          "virtualHubRouteTableV2s": [],
          "addressPrefix": "10.168.0.0/24",
          "virtualRouterAsn": 65515,
          "virtualRouterIps": [],
          "routeTable": {
            "routes": []
          },
          "virtualRouterAutoScaleConfiguration": {
            "minCapacity": 2
          },
          "virtualWan": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan"
          },
          "networkVirtualAppliances": [],
          "sku": "Basic",
          "routingState": "None",
          "allowBranchToBranchTraffic": false,
          "hubRoutingPreference": "ExpressRoute"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2ba9a69c-2b19-48ae-9d7a-c78a5fa042d2",
        "x-ms-correlation-request-id": "be5946da-63a9-450f-bbd8-5e35d9976643",
        "x-ms-ratelimit-remaining-subscription-reads": "11949",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063827Z:be5946da-63a9-450f-bbd8-5e35d9976643"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:37 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1e8d916d-d8da-4e35-a476-ff651863e178",
        "x-ms-correlation-request-id": "c6fd3f6e-7820-4b98-ac9a-d3ff75152036",
        "x-ms-ratelimit-remaining-subscription-reads": "11948",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063838Z:c6fd3f6e-7820-4b98-ac9a-d3ff75152036"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:38:58 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a2f524cb-d58d-4640-a2cf-bca7b9114fb2",
        "x-ms-correlation-request-id": "ef6b4053-c6c4-4113-9902-5138e5fcde3f",
        "x-ms-ratelimit-remaining-subscription-reads": "11947",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063858Z:ef6b4053-c6c4-4113-9902-5138e5fcde3f"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:39:19 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c41b1cfd-c09a-4577-a86c-6e6ce5bd8a5d",
        "x-ms-correlation-request-id": "8a73cf1e-6204-408f-b6ab-54b2a34ef3ac",
        "x-ms-ratelimit-remaining-subscription-reads": "11946",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063919Z:8a73cf1e-6204-408f-b6ab-54b2a34ef3ac"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:39:58 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b0660712-718e-4f2e-999a-a13175d32258",
        "x-ms-correlation-request-id": "6a1d7d06-1ad1-4897-b809-d834758e88d8",
        "x-ms-ratelimit-remaining-subscription-reads": "11945",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T063959Z:6a1d7d06-1ad1-4897-b809-d834758e88d8"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:40:39 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "80",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d509239d-c0d4-426d-8ab0-dfdf61ed6d5d",
        "x-ms-correlation-request-id": "34055b1e-de22-436e-b28f-ea8adcbeeadb",
        "x-ms-ratelimit-remaining-subscription-reads": "11944",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064039Z:34055b1e-de22-436e-b28f-ea8adcbeeadb"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:42:01 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "160",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8d90c9dc-a11e-46cd-8626-09b635231ba7",
        "x-ms-correlation-request-id": "2f8341c0-16c7-437c-bdca-e3ef14d5eef6",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064201Z:2f8341c0-16c7-437c-bdca-e3ef14d5eef6"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/323cc9f1-108e-4250-a3bc-b7ad572fd487?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "788290f0-3374-487b-ae76-3e56b29769c0",
        "x-ms-correlation-request-id": "69dd34a0-17ad-48ed-90fd-19405be82211",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064442Z:69dd34a0-17ad-48ed-90fd-19405be82211"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "89fcfb01-4473-4c67-a376-6beedf8e70e0",
        "x-ms-correlation-request-id": "eb72c5de-35cb-4395-923e-0e20a04ba72f",
        "x-ms-ratelimit-remaining-subscription-reads": "11998",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064443Z:eb72c5de-35cb-4395-923e-0e20a04ba72f"
      },
      "ResponseBody": {
        "name": "virtualhub",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub",
        "etag": "W/\u002208bdc44c-716d-4a25-bf87-95dc6b19b401\u0022",
        "type": "Microsoft.Network/virtualHubs",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "virtualHubRouteTableV2s": [],
          "addressPrefix": "10.168.0.0/24",
          "virtualRouterAsn": 65515,
          "virtualRouterIps": [],
          "routeTable": {
            "routes": []
          },
          "virtualRouterAutoScaleConfiguration": {
            "minCapacity": 2
          },
          "virtualWan": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualWans/virtualwan"
          },
          "networkVirtualAppliances": [],
          "sku": "Basic",
          "routingState": "Provisioning",
          "allowBranchToBranchTraffic": false,
          "hubRoutingPreference": "ExpressRoute"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "94",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "location": "eastus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "threatIntelMode": "Alert"
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus/nfvOperations/64aa8399-bd1f-475a-be7d-7be79336e4e0?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "570",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "dc212193-9551-4172-9ae2-fd2ad789e588",
        "x-ms-ratelimit-remaining-subscription-writes": "1199",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064447Z:dc212193-9551-4172-9ae2-fd2ad789e588"
      },
      "ResponseBody": {
        "properties": {
          "sku": {
            "tier": "Standard"
          },
          "childPolicies": [],
          "ruleCollectionGroups": [],
          "firewalls": [],
          "threatIntelMode": "Alert",
          "provisioningState": "Updating"
        },
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy",
        "name": "firewallpolicy",
        "type": "Microsoft.Network/FirewallPolicies",
        "etag": "701fe44d-e13c-4a35-b71f-3419e84f8ef7",
        "location": "eastus",
        "tags": {
          "key1": "value1"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus/nfvOperations/64aa8399-bd1f-475a-be7d-7be79336e4e0?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "46c6be98-f501-4315-a613-b1126beadaa2",
        "x-ms-ratelimit-remaining-subscription-reads": "11997",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064447Z:46c6be98-f501-4315-a613-b1126beadaa2"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:48 GMT",
        "ETag": "\u0022701fe44d-e13c-4a35-b71f-3419e84f8ef7\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "e2d9ef30-6d51-4f7d-b08b-86232f1ac415",
        "x-ms-ratelimit-remaining-subscription-reads": "11996",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064448Z:e2d9ef30-6d51-4f7d-b08b-86232f1ac415"
      },
      "ResponseBody": {
        "properties": {
          "sku": {
            "tier": "Standard"
          },
          "childPolicies": [],
          "ruleCollectionGroups": [],
          "firewalls": [],
          "threatIntelMode": "Alert",
          "provisioningState": "Succeeded"
        },
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy",
        "name": "firewallpolicy",
        "type": "Microsoft.Network/FirewallPolicies",
        "etag": "701fe44d-e13c-4a35-b71f-3419e84f8ef7",
        "location": "eastus",
        "tags": {
          "key1": "value1"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "510",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "location": "West US",
        "tags": {
          "key1": "value1"
        },
        "zones": [],
        "properties": {
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          },
          "hubIPAddresses": {
            "publicIPs": {
              "addresses": [],
              "count": 1
            }
          },
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          }
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "788",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "538b7c3f-63b2-42cf-ba77-10556672ebc6",
        "x-ms-correlation-request-id": "5747e706-e5e1-4e4a-8fdb-47faa17f3180",
        "x-ms-ratelimit-remaining-subscription-writes": "1198",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064454Z:5747e706-e5e1-4e4a-8fdb-47faa17f3180"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u0022c4cb6b65-d3f6-4651-9723-d5abdcf2fed2\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "publicIPs": {
              "addresses": [],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:44:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "454d799b-b7c5-4388-a2a8-ff48e27a0a6c",
        "x-ms-correlation-request-id": "d9718668-6eb8-40f1-96f0-55872e69d06d",
        "x-ms-ratelimit-remaining-subscription-reads": "11995",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064454Z:d9718668-6eb8-40f1-96f0-55872e69d06d"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:45:04 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fa58b9b4-7687-418a-b1e1-d1203668d449",
        "x-ms-correlation-request-id": "81d09038-d2f4-47c7-a89a-c3d61e956980",
        "x-ms-ratelimit-remaining-subscription-reads": "11994",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064505Z:81d09038-d2f4-47c7-a89a-c3d61e956980"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:45:24 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6b496ec3-24ef-4ea7-a86c-d6ed8dba966a",
        "x-ms-correlation-request-id": "4e236cdc-d544-4b09-bb8b-68825347b64c",
        "x-ms-ratelimit-remaining-subscription-reads": "11993",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064525Z:4e236cdc-d544-4b09-bb8b-68825347b64c"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:45:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "90b980a4-17ea-4909-befc-ee0c86661a1b",
        "x-ms-correlation-request-id": "c1af28c9-48bb-47e5-88d3-2843f9ff6bd3",
        "x-ms-ratelimit-remaining-subscription-reads": "11992",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064545Z:c1af28c9-48bb-47e5-88d3-2843f9ff6bd3"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:46:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "eaaf50e9-aa94-44ce-9ee9-49b918cdd1d1",
        "x-ms-correlation-request-id": "67fb4f43-0cbc-42c8-8e38-0358e29e0d04",
        "x-ms-ratelimit-remaining-subscription-reads": "11991",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064626Z:67fb4f43-0cbc-42c8-8e38-0358e29e0d04"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:47:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "80",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0bc591ed-e8a7-43b7-81cf-ce8f869042df",
        "x-ms-correlation-request-id": "cb45f9b5-8269-4623-b687-16bf8f49d23b",
        "x-ms-ratelimit-remaining-subscription-reads": "11990",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064707Z:cb45f9b5-8269-4623-b687-16bf8f49d23b"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:48:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "160",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4eb9ce45-d721-44da-b691-5b0f147f653c",
        "x-ms-correlation-request-id": "c9c1193b-0096-42d7-ba5f-1e9ee2304e78",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T064828Z:c9c1193b-0096-42d7-ba5f-1e9ee2304e78"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:51:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "60333983-c1a6-4153-afe9-7a864e2e4754",
        "x-ms-correlation-request-id": "5ad2a6ba-4d08-4a3c-890b-f103a8ce86ea",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065109Z:5ad2a6ba-4d08-4a3c-890b-f103a8ce86ea"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:52:50 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5567563e-dcad-4abb-989b-d9f8358bf762",
        "x-ms-correlation-request-id": "443a352b-c6ab-415f-bea8-77c178fc9646",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065250Z:443a352b-c6ab-415f-bea8-77c178fc9646"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:54:31 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3cf7f0af-1271-4d61-971b-48fba4acf350",
        "x-ms-correlation-request-id": "fbaa6697-7963-46fe-9c2a-4503d75b015c",
        "x-ms-ratelimit-remaining-subscription-reads": "11995",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065432Z:fbaa6697-7963-46fe-9c2a-4503d75b015c"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:56:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "65988d9f-9f2b-4820-827b-b12fafedb4a0",
        "x-ms-correlation-request-id": "475d1229-2593-4b23-8bbf-3afa6804a8c6",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065613Z:475d1229-2593-4b23-8bbf-3afa6804a8c6"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:57:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "93bc3e6e-cd27-4699-a291-a8204e123de2",
        "x-ms-correlation-request-id": "ab354df2-1a28-4c00-bef5-e316b56e073a",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065754Z:ab354df2-1a28-4c00-bef5-e316b56e073a"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 06:59:35 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "100",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "96c5fb42-6c37-4661-90ae-1fe52a104626",
        "x-ms-correlation-request-id": "b1b3149f-b05b-49cc-8554-853f60ac3ebe",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T065935Z:b1b3149f-b05b-49cc-8554-853f60ac3ebe"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/28df9a2c-9400-4fba-9da4-777904b3b0c3?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:15 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a8e1612a-dabb-413a-b8fe-66947acf47e8",
        "x-ms-correlation-request-id": "e0aaae17-3864-4f6d-a451-4eef0b94866f",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070116Z:e0aaae17-3864-4f6d-a451-4eef0b94866f"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:16 GMT",
        "ETag": "W/\u0022d42d417b-7b2a-4fd4-b164-4b1f29462b6c\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f4995660-3c49-47e8-bdfa-1bc3031a5f28",
        "x-ms-correlation-request-id": "b513e995-2dc7-4ad6-b937-b6201d81f98a",
        "x-ms-ratelimit-remaining-subscription-reads": "11998",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070116Z:b513e995-2dc7-4ad6-b937-b6201d81f98a"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u0022d42d417b-7b2a-4fd4-b164-4b1f29462b6c\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:16 GMT",
        "ETag": "W/\u0022d42d417b-7b2a-4fd4-b164-4b1f29462b6c\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "379c2d35-1d28-4c80-8a15-b484e7ab647b",
        "x-ms-correlation-request-id": "9398259c-b2a8-487b-9575-6ca246431583",
        "x-ms-ratelimit-remaining-subscription-reads": "11997",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070117Z:9398259c-b2a8-487b-9575-6ca246431583"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u0022d42d417b-7b2a-4fd4-b164-4b1f29462b6c\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "PATCH",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "46",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:18 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "dde9aab1-0439-481c-9bbe-ad4dab79a5bf",
        "x-ms-correlation-request-id": "4a123b24-fc31-4ef4-8004-237c880f72fc",
        "x-ms-ratelimit-remaining-subscription-writes": "1199",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070119Z:4a123b24-fc31-4ef4-8004-237c880f72fc"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:19 GMT",
        "ETag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "81d25e41-0d33-4e34-afaa-43166a0ba46e",
        "x-ms-correlation-request-id": "2a587842-e89e-42d7-bf7f-d318059e171d",
        "x-ms-ratelimit-remaining-subscription-reads": "11996",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070120Z:2a587842-e89e-42d7-bf7f-d318059e171d"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:01:51 GMT",
        "ETag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "53d9b1bf-fb8b-41c6-bc49-48d627aa648e",
        "x-ms-correlation-request-id": "311adc23-d931-4315-8ac3-9e122827a69c",
        "x-ms-ratelimit-remaining-subscription-reads": "11995",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070151Z:311adc23-d931-4315-8ac3-9e122827a69c"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:02:21 GMT",
        "ETag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6da6377c-2a9e-4b15-8ea3-2902d5de57c4",
        "x-ms-correlation-request-id": "1f329df0-2b53-4e65-8589-f3d8455334ea",
        "x-ms-ratelimit-remaining-subscription-reads": "11994",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070222Z:1f329df0-2b53-4e65-8589-f3d8455334ea"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:02:53 GMT",
        "ETag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "db95093f-ccea-4dad-a379-39a608f681ca",
        "x-ms-correlation-request-id": "3bd5d53a-7209-428d-83f0-655d2873d85a",
        "x-ms-ratelimit-remaining-subscription-reads": "11993",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070253Z:3bd5d53a-7209-428d-83f0-655d2873d85a"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:03:24 GMT",
        "ETag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "878ec42e-9f1f-486c-aafe-b49e9bab7d21",
        "x-ms-correlation-request-id": "80e2228e-f28f-4cbb-a6f5-3f413f93ab6d",
        "x-ms-ratelimit-remaining-subscription-reads": "11992",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070324Z:80e2228e-f28f-4cbb-a6f5-3f413f93ab6d"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u00229b676628-6b38-445d-b10f-321b0c39a0fc\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:03:54 GMT",
        "ETag": "W/\u0022b1b3e50b-99f8-43cb-9ed0-6bd46b4c4841\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b60b53e3-5df4-4871-b070-3774d8c71e65",
        "x-ms-correlation-request-id": "69bcef50-ebf6-41f7-952b-8c9d0f345265",
        "x-ms-ratelimit-remaining-subscription-reads": "11991",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070354Z:69bcef50-ebf6-41f7-952b-8c9d0f345265"
      },
      "ResponseBody": {
        "name": "azurefirewall",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall",
        "etag": "W/\u0022b1b3e50b-99f8-43cb-9ed0-6bd46b4c4841\u0022",
        "type": "Microsoft.Network/azureFirewalls",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "sku": {
            "name": "AZFW_Hub",
            "tier": "Standard"
          },
          "additionalProperties": {},
          "virtualHub": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/virtualHubs/virtualhub"
          },
          "hubIPAddresses": {
            "privateIPAddress": "10.168.0.132",
            "publicIPs": {
              "addresses": [
                {
                  "address": "20.245.73.5"
                }
              ],
              "count": 1
            }
          },
          "firewallPolicy": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/firewallPolicies/firewallpolicy"
          }
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/20ad2a59/providers/Microsoft.Network/azureFirewalls/azurefirewall?api-version=2023-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "0",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Mon, 07 Aug 2023 07:03:54 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2dc10641-ba1c-4fe8-8450-2e45e5eb6258",
        "x-ms-correlation-request-id": "a0fe3d2a-40e2-4c6d-9b2b-364d9fd43825",
        "x-ms-ratelimit-remaining-subscription-deletes": "14999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070355Z:a0fe3d2a-40e2-4c6d-9b2b-364d9fd43825"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:03:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5d553444-ea13-48bf-ac4d-d9bd95b1771d",
        "x-ms-correlation-request-id": "30c163f1-129b-4c7e-9608-a76529a0f929",
        "x-ms-ratelimit-remaining-subscription-reads": "11990",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070355Z:30c163f1-129b-4c7e-9608-a76529a0f929"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:04:05 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "327369bf-396c-4bbb-8eb9-4b5836f27355",
        "x-ms-correlation-request-id": "1b4f22cb-523f-4556-8c1f-081160427e27",
        "x-ms-ratelimit-remaining-subscription-reads": "11989",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070406Z:1b4f22cb-523f-4556-8c1f-081160427e27"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:04:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "20",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b00f400a-24b0-4bc6-81c4-318e92dd9f78",
        "x-ms-correlation-request-id": "3ebc6a46-7971-42e7-ac32-b5661b4a684f",
        "x-ms-ratelimit-remaining-subscription-reads": "11988",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070426Z:3ebc6a46-7971-42e7-ac32-b5661b4a684f"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:04:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f603eecf-5f83-4506-8a5c-fda52820453e",
        "x-ms-correlation-request-id": "add32a07-945f-4738-b6f0-712e9ea1f5e8",
        "x-ms-ratelimit-remaining-subscription-reads": "11987",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070447Z:add32a07-945f-4738-b6f0-712e9ea1f5e8"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:05:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "40",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5481e1cc-1cd8-4d64-bb6c-4d648f13e7a0",
        "x-ms-correlation-request-id": "594a9ae5-ea41-4a0e-85de-b735c36af1cb",
        "x-ms-ratelimit-remaining-subscription-reads": "11986",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070527Z:594a9ae5-ea41-4a0e-85de-b735c36af1cb"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:06:08 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "80",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2b993075-6b3a-45d7-b42e-b1eb92b6f299",
        "x-ms-correlation-request-id": "7c71afd3-ac9f-40fc-8adf-887a9d713878",
        "x-ms-ratelimit-remaining-subscription-reads": "11985",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070608Z:7c71afd3-ac9f-40fc-8adf-887a9d713878"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:07:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "160",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b9c92e9f-0184-49c0-8f1f-172e3eb618bd",
        "x-ms-correlation-request-id": "7697766a-efb4-4039-90a3-3b9d95f1d75c",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T070729Z:7697766a-efb4-4039-90a3-3b9d95f1d75c"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:10:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d9185788-5f66-49b1-863e-27bd22ee2c35",
        "x-ms-correlation-request-id": "48c79783-a78a-4f6b-9282-5154e9404216",
        "x-ms-ratelimit-remaining-subscription-reads": "11997",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071010Z:48c79783-a78a-4f6b-9282-5154e9404216"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 204,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:10:10 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/236fc4ce-49f4-4f46-aee0-fe68ed61afeb?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2dc10641-ba1c-4fe8-8450-2e45e5eb6258",
        "x-ms-correlation-request-id": "a0fe3d2a-40e2-4c6d-9b2b-364d9fd43825",
        "x-ms-ratelimit-remaining-subscription-reads": "11996",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071010Z:ac548fde-8969-43d8-b9d2-c8d4a0946499"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {}
}
